--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
 .search-form button {
   border: none;
+  color: white;
+  background: rgb(74, 68, 131);
+  cursor: pointer;
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+.search-form input {
+  font-size: 2rem;
+  padding: 0.5rem;
+  width: 50%;
+  border: none;
+  border: 2px solid rgb(74, 68, 131);
+}
+
+.search-form {
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
 }
